add root to tee

--- a/recovery/root/teegris_v4.rc
+++ b/recovery/root/teegris_v4.rc
@@ -1,8 +1,8 @@
 on post-fs
 # TEEGRIS service
-    mkdir /mnt/vendor/efs/tee 0700 system system
-    mkdir /dev/socket/iwt 0770 system system
-    mkdir /dev/socket/iwt/ca 0770 system system
+    mkdir /mnt/vendor/efs/tee 0700 root root
+    mkdir /dev/socket/iwt 0770 root root
+    mkdir /dev/socket/iwt/ca 0770 root root
     start tz_service
     wait_for_prop vendor.tzdaemon Ready
     setprop vendor.TEEGRIS.loaded true
@@ -12,16 +12,16 @@ on post-fs
 
 on post-fs-data
 # TEEGRIS service
-    mkdir /data/vendor/tee 0700 system system
+    mkdir /data/vendor/tee 0700 root root
 
 service tz_service /vendor/bin/tzdaemon
     class core
-    user system
-    group system readproc
+    user root
+    group root readproc
     disabled
 
 service tzts_service /vendor/bin/tzts_daemon
     class core
-    user system
-    group system
+    user root
+    group root
     disabled
