Add Recovery label

--- a/recovery/root/teegris_v4.rc
+++ b/recovery/root/teegris_v4.rc
@@ -19,9 +19,11 @@ service tz_service /vendor/bin/tzdaemon
     user root
     group root readproc
     disabled
+    seclabel u:r:recovery:s0
 
 service tzts_service /vendor/bin/tzts_daemon
     class core
     user root
     group root
     disabled
+    seclabel u:r:recovery:s0
