--- a/recovery/root/init.recovery.mt8781.rc
+++ b/recovery/root/init.recovery.mt8781.rc
@@ -14,3 +14,5 @@ on fs && property:ro.debuggable=0
 
 on boot
     exec u:r:update_engine:s0 root root -- /system/bin/mtk_plpath_utils
+    
+    start health-hal-2-1
