--- a/recovery/root/init.recovery.mt8781.rc
+++ b/recovery/root/init.recovery.mt8781.rc
@@ -1,10 +1,14 @@
 import /init.recovery.project.rc
 import /init.recovery.samsung.rc
+import /teegris_v4.rc
 
 on init
     setprop sys.usb.configfs 1
     setprop sys.usb.controller "musb-hdrc"
     setprop sys.usb.ffs.aio_compat 0
+
+    start vendor.keymint-default
+    start vendor.gatekeeper-1-0
 
 on fs && property:ro.debuggable=0
     # distinguish USB shoulde connect or not, i.e. CDP vs SDP
@@ -12,5 +16,30 @@ on fs && property:ro.debuggable=0
     # set charging free due to it wait for USB activation
     start adbd
 
+on post-fs
+    mkdir /mnt/vendor/efs/DAK 0775 root root
+    restorecon -R /mnt/vendor/efs/DAK
+    chown root root /mnt/vendor/efs/DAK/gakkeybox
+    chmod 0644 /mnt/vendor/efs/DAK/gakkeybox
+
+on post-fs-data
+    mkdir /data/vendor/keymaster 0775 root root
+    mkdir /data/vendor/gatekeeper 0770 root root
+
 on boot
     exec u:r:update_engine:s0 root root -- /system/bin/mtk_plpath_utils
+    
+    start health-hal-2-1
+
+service vendor.keymint-default /vendor/bin/hw/android.hardware.security.keymint-service
+    class early_hal
+    user root
+    group root drmrpc
+    seclabel u:r:recovery:s0
+
+service vendor.gatekeeper-1-0 /vendor/bin/hw/android.hardware.gatekeeper@1.0-service
+    interface android.hardware.gatekeeper@1.0::IGatekeeper default
+    class hal
+    user root
+    group root 5678
+    seclabel u:r:recovery:s0
