--- a/recovery/root/init.recovery.mt8781.rc
+++ b/recovery/root/init.recovery.mt8781.rc
@@ -43,3 +43,7 @@ service vendor.gatekeeper-1-0 /vendor/bin/hw/android.hardware.gatekeeper@1.0-ser
     user root
     group root 5678
     seclabel u:r:recovery:s0
+
+# Module Loading
+on post-fs-data
+    exec - root -- /vendor/bin/init.insmod.sh
